# acrocyte_simple-stitch-app

./: .gitignore  CLAUDE.md  README.md  ashlar-runner.spec  demo_nb.py  dev-app-update.yml  electron-builder.yml  install-mac.sh  package-lock.json  package.json  pyproject.toml  stitch_entry.py
.github/workflows/: build-windows.yml
python/: _channelinfo.py  ashlar_adapter.py  metamorphtiff.py  runner.py
scripts/: codesign-mac.sh
src/main/: index.ts
src/preload/: index.d.ts  index.ts
src/renderer/src/: App.tsx
stitcher/: metamorphtiff.py  runner.py
